Bug 8888 - pam_winbind: Fix compiler warnings
Summary: pam_winbind: Fix compiler warnings
Status: RESOLVED FIXED
Alias: None
Product: Samba 3.6
Classification: Unclassified
Component: Winbind (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal
Target Milestone: ---
Assignee: Michael Adam
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-23 13:44 UTC by Stef walter
Modified: 2016-12-16 11:30 UTC (History)
0 users

See Also:


Attachments
Fix winbind compiler warnings (2.42 KB, patch)
2012-04-23 13:45 UTC, Stef walter
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stef walter 2012-04-23 13:44:30 UTC
[stef@stef-desktop frob]$ gcc --version
gcc (GCC) 4.7.0 20120416 (Red Hat 4.7.0-2)
Copyright (C) 2012 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

Fix these warnings in pam_winbind:

../nsswitch/pam_winbind.c: In function ‘converse’:
../nsswitch/pam_winbind.c:651:9: warning: to be safe all intermediate pointers in cast from ‘struct pam_message **’ to ‘const struct pam_message **’ must be ‘const’ qualified [-Wcast-qual]
../nsswitch/pam_winbind.c: In function ‘winbind_chauthtok_request’:
../nsswitch/pam_winbind.c:1989:4: warning: case value ‘4294967295’ not in enumerated type ‘enum wbcPasswordChangeRejectReason’ [-Wswitch]
../nsswitch/pam_winbind.c: In function ‘pam_sm_acct_mgmt’:
../nsswitch/pam_winbind.c:2840:9: warning: to be safe all intermediate pointers in cast from ‘void **’ to ‘const void **’ must be ‘const’ qualified [-Wcast-qual]
../nsswitch/pam_winbind.c: In function ‘pam_sm_chauthtok’:
../nsswitch/pam_winbind.c:3078:7: warning: to be safe all intermediate pointers in cast from ‘char **’ to ‘const char **’ must be ‘const’ qualified [-Wcast-qual]
../nsswitch/pam_winbind.c:3148:12: warning: to be safe all intermediate pointers in cast from ‘char **’ to ‘const char **’ must be ‘const’ qualified [-Wcast-qual]

Couldn't fix these:

../nsswitch/pam_winbind.c: In function ‘_pam_get_item’:
../nsswitch/pam_winbind.c:175:22: warning: cast discards ‘__attribute__((const))’ qualifier from pointer target type [-Wcast-qual]
../nsswitch/pam_winbind.c: In function ‘_pam_get_data’:
../nsswitch/pam_winbind.c:182:22: warning: cast discards ‘__attribute__((const))’ qualifier from pointer target type [-Wcast-qual]
Comment 1 Stef walter 2012-04-23 13:45:24 UTC
Created attachment 7474 [details]
Fix winbind compiler warnings
Comment 2 Björn Jacke 2016-12-16 11:30:18 UTC
Thanks, most of those had been fixed in the meantime. The remaining ones are fixed in master now.